# spectra

./: .gitignore  README.md
sandbox/: index.html
script/: README.md  build.js  package-lock.json  package.json  tsconfig.json
script/src/: index.ts
script/src/SpectraJS/: index.ts  types.ts
script/src/SpectraJS/constants/: errors.ts  events.ts  globals.ts  index.ts  types.ts
script/src/SpectraJS/services/tracker/: helpers.ts  index.ts  utils.ts
server/: .env.example  Makefile  README.md  app.py  pyproject.toml  pyrightconfig.json  requirements.txt  schema.sql
server/spectra/: __init__.py  app.py  bigquery_client.py  cli.py  config.py  events.py
