[project]
name = "spectra-server"
version = "1.0.0"
description = "Analytics event ingestion server for Spectra"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spectra"]
dependencies = [
    "fastapi>=0.104.0",
    "python-dotenv>=1.0.0",
    "google-cloud-bigquery>=3.0.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
